# AromotionAI

./: .env.example  .gitignore  DEPLOY.md  PROGRESS.md  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  docker-compose.yml  run_tests.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  _l4_smoke.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/ai/: __init__.py  base.py  mock_utils.py  provider_deepseek.py  provider_glm.py  provider_openai.py  registry.py  test_write.py
backend/app/analyzers/: __init__.py  base.py  comment_analyzer.py  media_processor.py  profile_aggregator.py  visual_analyzer.py
backend/app/api/: deps.py
backend/app/core/: task_manager.py
backend/app/engines/: __init__.py  base.py  prompt_engine.py
backend/app/models/: __init__.py  analysis.py  base.py  blogger.py  cookie.py  fragrance.py  profile.py
backend/app/schemas/: __init__.py  analysis.py  common.py  cookie.py  fragrance.py
backend/app/services/: __init__.py  analysis_service.py  cookie_service.py  fragrance_service.py  task_service.py
backend/tests/: conftest.py  test_adversarial.py  test_ai_providers.py  test_analysis_api.py  test_analysis_service.py  test_analyzers.py  test_boundary_stress.py  test_collector_edge.py  test_cookie_service.py  test_cookies.py  test_douyin_collector.py  test_fragrance_api.py  test_fragrance_service.py  test_media_processor.py  test_task_manager.py
backend/tests/e2e/: conftest.py  test_f1_cookies.py  test_f2_analysis_create.py  test_f3_progress.py  test_f4_reports.py  test_f6_chat.py  (+4 more)
(+59 files in other folders)
